# EmbeddedIntentRecognizer

./: .gitignore  CMakeLists.txt  README.md
SourceCode/Sources/: CommandLineSingleton.cpp
SourceCode/headers/: CommandLineSingleton.h
UnitTest/: CMakeLists.txt  TestIntentRecognizer.cpp
impl/inc/: CommandLineSingleton.hpp  FactIntent.hpp  Intent.hpp  IntentFactory.hpp  IntentRecognizer.hpp  IntentRecognizerSingleton.hpp  WeatherIntent.hpp  defs.hpp
impl/src/: CommandLineSingleton.cpp  FactIntent.cpp  IntentFactory.cpp  IntentRecognizer.cpp  IntentRecognizerSingleton.cpp  RecognizerMain.cpp  WeatherIntent.cpp
